Issue #2978 - Add module-info to relevant Jetty modules.
Moved jetty-http test utility classes to new module "jetty-http-test".
This simplifies the dependencies and the configuration for JPMS.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>